--- a/index.html
+++ b/index.html
@@ -994,7 +994,7 @@ return `<!DOCTYPE html>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>${esc(pName||'Prohlídka')} – Report</title>
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9/dist/leaflet.css"/>
-<script src="https://unpkg.com/leaflet@1.9/dist/leaflet.js"><\\/script>
+<script src="https://unpkg.com/leaflet@1.9/dist/leaflet.js"><` + `/script>
 <style>
 :root{--bg:#f5f5f7;--s1:#fff;--s2:#e8e8ed;--acc:#f5a623;--txt:#1d1d1f;--txt2:#6e6e73;--r:10px}
 *{box-sizing:border-box;margin:0;padding:0}
@@ -1182,7 +1182,7 @@ function initMap(){
 }
 
 if(DATA.length)show(0);
-<\\/script>
+<` + `/script>
 </body>
 </html>`;
 }
